Dodano możłiwość dodawania ofert

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('tenders.list_tenders') }}">
+                            <i class="bi bi-file-earmark-text me-1"></i>Oferty
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.list_persons') }}">
                             <i class="bi bi-people me-1"></i>Osoby
                         </a>
