--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,7 @@
             }
         })();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top custom-navbar-style">
@@ -73,6 +74,10 @@
                             <li><a class="dropdown-item" href="{{ url_for('main.list_address_types') }}"><i class="bi bi-geo-alt me-2"></i>Typy adresów</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('main.list_phone_types') }}"><i class="bi bi-telephone me-2"></i>Typy telefonów</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('main.list_email_types') }}"><i class="bi bi-envelope me-2"></i>Typy e-maili</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.list_categories') }}"><i class="bi bi-tags me-2"></i>Kategorie cen</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('tenders.list_all_unit_prices') }}"><i class="bi bi-currency-dollar me-2"></i>Wszystkie ceny jedn.</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('tenders.unit_prices_analysis') }}"><i class="bi bi-graph-up me-2"></i>Analiza cen jedn.</a></li>
                         </ul>
                     </li>
                     {% endif %}
@@ -100,7 +105,7 @@
         </div>
     </nav>
 
-    <div class="container pt-5 pb-4 mt-5">
+    <div class="{% if full_width_page %}container-fluid{% else %}container pt-5 pb-4 mt-5{% endif %}">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
@@ -117,6 +122,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
     <script src="{{ url_for('static', filename='js/select2_config.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     {% block scripts %}{% endblock %}
